# our-storage

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/oro_storage/: __init__.py  erasure.py  integrity.py  interface.py
src/our_storage/: __init__.py  backend.py  interface.py  models.py
tests/: conftest.py  test_backend.py  test_erasure.py  test_init.py  test_integration.py  test_integrity.py
